<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tripPage2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.calculation.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurementspage_textview_layout_margin_top"
                android:paddingLeft="@dimen/measurementspage_padding_left"
                android:text="@string/measurementspage_value_txt_a"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurementspage_layout_margin_top"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_length"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_breadth"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_height"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_total"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtLength_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/measurementspage_layout_margin_left"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtBreadth_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtHeight_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtTotal_a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/measurementspage_layout_margin_right"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurementspage_textview_layout_margin_top"
                android:paddingLeft="@dimen/measurementspage_padding_left"
                android:text="@string/measurementspage_value_txt_b"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurementspage_layout_margin_top"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_length"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_breadth"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_height"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_total"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtLength_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/measurementspage_layout_margin_left"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtBreadth_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtHeight_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtTotal_b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/measurementspage_layout_margin_right"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/measurementspage_padding_left"
                android:text="@string/measurementspage_value_txt_c"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurementspage_layout_margin_top"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_length"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_breadth"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_height"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/measurementspage_value_txt_total"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtLength_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/measurementspage_layout_margin_left"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtBreadth_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtHeight_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtTotal_c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/measurementspage_layout_margin_right"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/measurementspage_padding_left"
                    android:text="@string/measurementspage_value_txt_d"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtTotal_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/measurementspage_layout_margin_right"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/measurementspage_layout_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/measurementspage_padding_left"
                    android:text="@string/measurementspage_value_txt_e"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtTotal_e"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/measurementspage_layout_margin_right"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/measurementspage_padding_left"
                    android:text="@string/measurementspage_value_txt_totalofaande"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtTotalqtyfortrip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/measurementspage_layout_margin_right"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="returnValue"
                android:src="#ffffff" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
